updated: - fix encoding problem;

--- a/WSUI.Core/WSUI.Core.csproj
+++ b/WSUI.Core/WSUI.Core.csproj
@@ -114,6 +114,48 @@
     <Compile Include="Extensions\CommonExtensions.cs" />
     <Compile Include="Extensions\FieldsExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="Helpers\DetectEncoding\EncodingTools.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\CMLangConvertCharset.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\CMLangConvertCharsetClass.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\CMLangString.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\CMLangStringClass.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\CMultiLanguage.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\CMultiLanguageClass.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\IEnumCodePage.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\IEnumRfc1766.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\IEnumScript.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\IMLangCodePages.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\IMLangConvertCharset.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\IMLangFontLink.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\IMLangFontLink2.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\IMLangLineBreakConsole.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\IMLangString.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\IMLangStringAStr.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\IMLangStringBufA.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\IMLangStringBufW.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\IMLangStringWStr.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\IMultiLanguage.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\IMultiLanguage2.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\IMultiLanguage3.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\ISequentialStream.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\IStream.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\tagDetectEncodingInfo.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\tagMIMECONTF.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\tagMIMECPINFO.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\tagMIMECSETINFO.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\tagMLCPF.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\tagMLDETECTCP.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\tagMLSTR_FLAGS.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\tagRFC1766INFO.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\tagSCRIPFONTINFO.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\tagSCRIPTINFO.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\tagSTATSTG.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\tagUNICODERANGE.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\_FILETIME.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\_LARGE_INTEGER.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\_RemotableHandle.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\_ULARGE_INTEGER.cs" />
+    <Compile Include="Helpers\DetectEncoding\Multilang\__MIDL_IWinTypes_0009.cs" />
     <Compile Include="Helpers\OutlookHelper.cs" />
     <Compile Include="Helpers\RegistryHelper.cs" />
     <Compile Include="Helpers\TempFileManager.cs" />
