for testing old version

--- a/Toolkits/wsadxpublisher.exe.config
+++ b/Toolkits/wsadxpublisher.exe.config
@@ -11,7 +11,7 @@
                 <value>h:\Visual\WORK\WSUI\solution\Clicktwice\full</value>
             </setting>
             <setting name="installationUrl" serializeAs="String">
-                <value>http://outlookfinder.com/downloads/clicktwice/full</value>
+                <value>http://readyshare.routerlogin.net/shares/NetShare/FTP/downloads/clicktwice/full</value>
             </setting>
             <setting name="iconFileName" serializeAs="String">
                 <value>h:\Visual\WORK\WSUI\solution\WSUI\Search.ico</value>
