--- a/WSUI.OutlookPlugin/app.config
+++ b/WSUI.OutlookPlugin/app.config
@@ -7,17 +7,17 @@
     </configSections>
     <applicationSettings>
         <WSUIOutlookPlugin.Properties.Settings>
-            <setting name="HelpUrl" serializeAs="String">
-                <value>http://www.outlookfinder.com/support </value>
-            </setting>
             <setting name="AllRights" serializeAs="String">
                 <value>All Rights Reserved.</value>
             </setting>
-            <setting name="ProductUrl" serializeAs="String">
-                <value>http://www.outlookfinder.com/</value>
-            </setting>
             <setting name="Email" serializeAs="String">
                 <value>info@outlookfinder.com</value>
+            </setting>
+            <setting name="HelpUrl" serializeAs="String">
+                <value>https://www.outlookfinder.com/support </value>
+            </setting>
+            <setting name="ProductUrl" serializeAs="String">
+                <value>https://www.outlookfinder.com/</value>
             </setting>
         </WSUIOutlookPlugin.Properties.Settings>
     </applicationSettings>
