git ignore update

--- a/.gitignore
+++ b/.gitignore
@@ -227,3 +227,4 @@ pip-log.txt
 /WSUI.Site/WordPressVersion/wp-content/cache/page_enhanced/.htaccess
 /WSUI.Site/WordPressVersion/wp-content/cache/page_enhanced/outlookfinder.com/try/_index.html.old
 /WSUI.Site/WordPressVersion/wp-content/cache/page_enhanced/outlookfinder.com/try/_index.html_gzip.old
+/ROutput
