updated: - added new tooltip style; - changed item layout; - changed text block for subject (with dots); - couple minor changes;

--- a/WSUI.OutlookPlugin/WSUI.OutlookPlugin.csproj
+++ b/WSUI.OutlookPlugin/WSUI.OutlookPlugin.csproj
@@ -186,9 +186,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="WSUIAddinModule.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="WSUIAddinModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WSUISidebar.cs">
       <SubType>Form</SubType>
