--- a/WSUI.Module/WSUI.Module.csproj
+++ b/WSUI.Module/WSUI.Module.csproj
@@ -136,21 +136,23 @@
     <Compile Include="Core\LazyKind.cs" />
     <Compile Include="Core\ViewModelBase.cs" />
     <Compile Include="Enums\Enums.cs" />
-    <Compile Include="Interface\ICommandStrategy.cs" />
-    <Compile Include="Interface\IDataView.cs" />
-    <Compile Include="Interface\IKindItem.cs" />
-    <Compile Include="Interface\IKindsView.cs" />
-    <Compile Include="Interface\ILazyKind.cs" />
-    <Compile Include="Interface\IMainView.cs" />
-    <Compile Include="Interface\IMainViewModel.cs" />
-    <Compile Include="Interface\IPreviewView.cs" />
-    <Compile Include="Interface\IScrollableView.cs" />
-    <Compile Include="Interface\IScrollBehavior.cs" />
-    <Compile Include="Interface\ISearchData.cs" />
-    <Compile Include="Interface\ISettingsView.cs" />
-    <Compile Include="Interface\ISidebarView.cs" />
-    <Compile Include="Interface\IUIView.cs" />
-    <Compile Include="Interface\IWSCommand.cs" />
+    <Compile Include="Interface\Service\ICommandStrategy.cs" />
+    <Compile Include="Interface\ViewModel\IContactDetailsViewModel.cs" />
+    <Compile Include="Interface\View\IContactDetailsView.cs" />
+    <Compile Include="Interface\View\IDataView.cs" />
+    <Compile Include="Interface\ViewModel\IKindItem.cs" />
+    <Compile Include="Interface\View\IKindsView.cs" />
+    <Compile Include="Interface\ViewModel\ILazyKind.cs" />
+    <Compile Include="Interface\View\IMainView.cs" />
+    <Compile Include="Interface\ViewModel\IMainViewModel.cs" />
+    <Compile Include="Interface\View\IPreviewView.cs" />
+    <Compile Include="Interface\View\IScrollableView.cs" />
+    <Compile Include="Interface\Service\IScrollBehavior.cs" />
+    <Compile Include="Interface\Service\ISearchData.cs" />
+    <Compile Include="Interface\View\ISettingsView.cs" />
+    <Compile Include="Interface\View\ISidebarView.cs" />
+    <Compile Include="Interface\View\IUIView.cs" />
+    <Compile Include="Interface\Service\IWSCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\AllFilesDataTemplateSelector.cs" />
     <Compile Include="Service\ContactDataTemplateSelector.cs" />
