--- a/WSUI.Module/WSUI.Module.csproj
+++ b/WSUI.Module/WSUI.Module.csproj
@@ -165,7 +165,7 @@
     <Compile Include="Service\Dialogs\Message\MessageView.xaml.cs">
       <DependentUpon>MessageView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Service\DoubleClickBehabior.cs" />
+    <Compile Include="Service\DoubleClickBehavior.cs" />
     <Compile Include="Service\FileExestensionsHelper.cs" />
     <Compile Include="Service\GridLengthAnimation.cs" />
     <Compile Include="Service\HelperConst.cs" />
