--- a/WSUI.Infrastructure/WSUI.Infrastructure.csproj
+++ b/WSUI.Infrastructure/WSUI.Infrastructure.csproj
@@ -149,6 +149,7 @@
     <Compile Include="Implements\Rules\AttachmentContentSearchRule.cs" />
     <Compile Include="Implements\Rules\AttachmentFilenameSearchRule.cs" />
     <Compile Include="Implements\Rules\ContactAttachmentSearchRule.cs" />
+    <Compile Include="Implements\Rules\ContactEmailSearchRule.cs" />
     <Compile Include="Implements\Rules\EmailContactSearchRule.cs" />
     <Compile Include="Implements\Rules\GeneralContactRule.cs" />
     <Compile Include="Implements\Systems\AllSearchSystem.cs" />
@@ -158,6 +159,7 @@
     <Compile Include="Implements\Rules\BaseRules\BaseFilelSearchRule.cs" />
     <Compile Include="Implements\Rules\ContactSearchRule.cs" />
     <Compile Include="Implements\Systems\ContactAttachmentSearchSystem.cs" />
+    <Compile Include="Implements\Systems\ContactEmailSearchSystem.cs" />
     <Compile Include="Implements\Systems\ContactSearchSystem.cs" />
     <Compile Include="Implements\Rules\EmailContentSearchRule.cs" />
     <Compile Include="Implements\Systems\Core\BaseAllEmailSearchSystem.cs" />
